后台设置 商品集成ckeditor

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-faker": "*",
+        "mihaildev/yii2-ckeditor": "*",
         "funson86/yii2-setting": "*",
         "funson86/yii2-cms": "*",
         "funson86/yii2-blog": "*",
